--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,35 +3,27 @@ name: Run Unit Tests
 on:
   push:
     branches:
-      - main
-  pull_request:
+      - main  # Запускать workflow при пуше в ветку main
+  pull_request:  # Запускать workflow для pull request
     branches:
       - main
 
 jobs:
   test:
-    name: Run Unit Tests on Multiple OS
     runs-on: ${{ matrix.os }}
-
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: [3.9, 3.10, 3.11]
+        os: [ubuntu-latest, windows-latest]  # Платформы
+        python-version: [3.10, 3.11]         # Версии Python
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Клонирование репозитория
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}  # Установка версии Python
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt || echo "No dependencies to install"
-
-    - name: Run Unit Tests
-      run: |
-        python -m unittest discover -s . -p "test_*.py"
+      - name: Run unit tests
+        run: python -m unittest discover  # Запуск тестов
